--- a/src/styles/layout/_comment.scss
+++ b/src/styles/layout/_comment.scss
@@ -1,13 +1,9 @@
 .comment {
   display: flex;
   flex-direction: row;
-  padding: 1rem;
+  padding: 0 1rem;
 
   margin-bottom: 1rem;
-
-  &:last-child {
-    margin-bottom: 2rem;
-  }
 
   &__color {
     height: 5rem;
